--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AI Christianity Platform - Biblical Language Learning with pronunciation practice" />
+    <meta name="description" content="Christianity Culture - An Experienced Journey through Christian traditions via eat, walk, listen, see, read, and meditate" />
     <!-- Permissions Policy for microphone and speaker -->
     <meta http-equiv="Permissions-Policy" content="microphone=(self), speaker=(self)" />
-    <title>Do you know Christianity?</title>
+    <title>Christianity Culture - An Experienced Journey</title>
     <!-- Widget JavaScript bundle -->
     <script src="https://cloud.google.com/ai/gen-app-builder/client?hl=en_US"></script>
   <script type="importmap">
